--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: "Computing Systems: Endless Frontier"
+title: Computing Systems Endless Frontier
 description: A Freshman Workshop about some exciting topics of computing systems.
 theme: jekyll-theme-cayman
