--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: ['Computing Systems: Endless Frontier']
-description: A workshop for UESTC freshmen about some exciting topics of computing systems.
+description: 计算系统的无尽前沿
 theme: jekyll-theme-cayman
