--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: ['Computing Systems: Endless Frontier']
-description: 计算系统的无尽前沿
+title: 'Computing Systems: Endless Frontier'
+description: 新生工作坊-计算系统的无尽前沿
 theme: jekyll-theme-cayman
