--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: 'Computing Systems: Endless Frontier'
-description: 新生工作坊-计算系统的无尽前沿
+description: 计 算 系 统 的 无 尽 前 沿
 theme: jekyll-theme-cayman
